[package]
name = "feasth"
version = "0.1.0"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
scraper = "0.12"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }